--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,8 @@
         {
             "type": "chrome",
             "request": "launch",
-            "name": "Open zhuanli.html",
-            "file": "/Users/wangliang/Desktop/zhuanli/zhuanli.html"
+            "name": "Open index.html",
+            "file": "/Users/wangliang/Desktop/zhuanli/index.html"
         }
     ]
 }
